[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/enemies/hand.png" type="Texture" id=1]
[ext_resource path="res://enemies/scripts/hand.gd" type="Script" id=2]
[ext_resource path="res://shaders/p_hit.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/redden = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 3 )

[sub_resource type="CircleShape2D" id=4]
radius = 5.09902

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 52 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 22, 52 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 5.0
height = 8.0

[sub_resource type="Animation" id=8]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/redden")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.0
height = 8.0

[node name="Hand" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -9 )
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="Hitboxes" type="Area2D" parent="."]
collision_layer = 128

[node name="HitboxShape" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="HitboxShape2" type="CollisionShape2D" parent="Hitboxes"]
position = Vector2( 0, -11 )
shape = SubResource( 4 )

[node name="DetectAnticipation" type="Area2D" parent="."]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="DetectAnticipation"]
position = Vector2( 0, -36 )
shape = SubResource( 5 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0, -36 )
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 17

[node name="HutboxShape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )

[node name="ShaderAnimator" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 8 )

[node name="KillzoneDetection" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 512

[node name="Collider" type="CollisionShape2D" parent="KillzoneDetection"]
position = Vector2( 0, -8 )
shape = SubResource( 9 )

[connection signal="area_entered" from="Hitboxes" to="." method="_on_Hitboxes_area_entered"]
[connection signal="area_entered" from="DetectAnticipation" to="." method="_on_DetectAnticipation_area_entered"]
[connection signal="area_exited" from="DetectAnticipation" to="." method="_on_DetectAnticipation_area_exited"]
[connection signal="area_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_area_entered"]
[connection signal="area_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="KillzoneDetection" to="." method="_on_KillzoneDetection_body_entered"]
